https://bugs.webkit.org/show_bug.cgi?id=57605 Frame::pageScaleFactor() should not affect getBoundingClientRect() or getClientRects() -and corresponding- <rdar://problem/9194541>

Reviewed by Sam Weinig.

New functions adjust*ForPageScale() are analogous to adjust*ForAbsoluteZoom().
* dom/Element.cpp:
(WebCore::Element::getClientRects):
(WebCore::Element::getBoundingClientRect):
* dom/Range.cpp:
(WebCore::adjustFloatQuadsForScrollAndAbsoluteZoomAndPageScale):
(WebCore::Range::getBorderAndTextQuads):
* rendering/RenderObject.h:
(WebCore::adjustFloatPointForPageScale):
(WebCore::adjustFloatQuadForPageScale):
(WebCore::adjustFloatRectForPageScale):



Canonical link: https://commits.webkit.org/72565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82778 268f45cc-cd09-0410-ab3c-d52691b4dbfc