Source/WebCore/rendering/RenderObject.h
@@ -1079,6 +1079,33 @@ inline void adjustFloatRectForAbsoluteZoom(FloatRect& rect, RenderObject* render
     rect.setHeight(adjustFloatForAbsoluteZoom(rect.height(), style));
 }
 
+inline FloatPoint adjustFloatPointForPageScale(const FloatPoint& point, float pageScale)
+{
+    if (pageScale == 1)
+        return point;
+    return FloatPoint(point.x() / pageScale, point.y() / pageScale);
+}
+
+inline void adjustFloatQuadForPageScale(FloatQuad& quad, float pageScale)
+{
+    if (pageScale == 1)
+        return;
+    quad.setP1(adjustFloatPointForPageScale(quad.p1(), pageScale));
+    quad.setP2(adjustFloatPointForPageScale(quad.p2(), pageScale));
+    quad.setP3(adjustFloatPointForPageScale(quad.p3(), pageScale));
+    quad.setP4(adjustFloatPointForPageScale(quad.p4(), pageScale));
+}
+
+inline void adjustFloatRectForPageScale(FloatRect& rect, float pageScale)
+{
+    if (pageScale == 1)
+        return;
+    rect.setX(rect.x() / pageScale);
+    rect.setY(rect.y() / pageScale);
+    rect.setWidth(rect.width() / pageScale);
+    rect.setHeight(rect.height() / pageScale);
+}
+
 } // namespace WebCore
 
 #ifndef NDEBUG
